<resources>
    <string name="app_name">영앤리치</string>
    <string name="kakao_login">카카오 로그인</string>
    <string name="youngnrich_launcher_icon">영앤리치 런처 아이콘</string>
    <string name="new_game">새 게임</string>
    <string name="existing_game">이어하기</string>
    <string name="my_page">마이페이지</string>
    <string name="ranking">랭킹</string>
    <string name="game_info">게임 정보</string>

    <string name="intro_0">당신은 위대한 경제학자이자 투자자인\n알렉산더 밀턴의 직계 후손입니다.</string>
    <string name="intro_1">당신의 가문에는,\n알렉산더가 주식 투자로 벌어들인\n막대한 양의 재산을\n비밀 사무실의 금고 안에 보관하였다는\n전설이 전해져 내려옵니다.</string>
    <string name="intro_2">비밀 사무실의 위치는 아무도 알지 못합니다.</string>
    <string name="intro_3">하지만 넘치는 호기심과 야무진 집념을 가지고 있는 당신은 할아버지께서 가장 아끼는 손주였죠.</string>
    <string name="intro_4">그래서 당신은 가족 중에,\n아니 아마 전세계에서 그 위치를 알고 있는\n유일한 사람일 겁니다…!</string>
    <string name="intro_5">수많은 시행착오 끝에 마침내,\n할아버지의 오래된 사무실에 도착했습니다.</string>
    <string name="intro_6">방에 들어간 순간,\n방문이 신비한 힘으로 인해 잠기고 맙니다.</string>
    <string name="intro_7">이제 당신은 금고를 열어,\n그 안에 무엇이 있는지 확인해야만\n방에서 나갈 수 있습니다.</string>
    <string name="intro_8">이 과정에서 당신은\n주식 시장의 작동 원리를 파악하고,\n할아버지의 투자 철학을 이해해야만 합니다.</string>
    <string name="slot_0">slot 0</string>
    <string name="slot_1">slot 1</string>
    <string name="slot_2">slot 2</string>
    <string name="slot_3">slot 3</string>
    <string name="slot_4">slot 4</string>
    <string name="slot_5">slot 5</string>
    <string name="zoom_button">zoom button</string>
    <string name="skip_button">skip button</string>
    <string name="prev_button">go-to-previous button</string>
    <string name="next_button">go-to-next button</string>
    <string name="game_button">go-to-game button</string>
    <string name="left_arrow">left arrow</string>
    <string name="first_room_background">first room background</string>
    <string name="right_arrow">right arrow</string>
    <string name="bottom_arrow">bottom arrow</string>
    <string name="television_on">television set-on</string>
    <string name="ipad">ipad</string>
    <string name="room_background">room background</string>
    <string name="pillow">pillow</string>
    <string name="picture_frame">picture frame</string>
    <string name="common_dialog">common dialog</string>

    <string name="dialog_ipad">아이패드를 발견했다…!</string>
    <string name="dialog_picture_frame">할아버지와 어린 시절의 내가 함께 찍힌 사진이다.\n
                    동전 탑을 쌓으며 할아버지와 즐거운 시간을 보냈던 그 시절은 아직까지도 내게 가장 행복했던 기억으로 남아있다…</string>
    <string name="dialog_pillow">리모콘을 발견했다…!</string>
    <string name="dialog_television">TV의 채널을 돌릴 무언가가 필요하다…</string>
    <string name="next_dialog_button">next dialog button</string>
    <string name="close_button">close dialog button</string>

    <string name="quiz_1_title">오늘의 경제 퀴즈 #1</string>
    <string name="ipad_quiz_1_1">경제에 대한 불확실성이 커지면 투자 심리도 함께 얼어붙어\n주가가</string>
    <string name="ipad_quiz_1_2">할 가능성이 커집니다.</string>
    <string name="answer_down">answer DOWN</string>
    <string name="answer_up">answer UP</string>
    <string name="quiz_2_title">오늘의 경제 퀴즈 #2</string>
    <string name="answer_decrease">줄어들고</string>
    <string name="answer_increase">늘어나고</string>
    <string name="submit_button">go-to-submit button</string>
    <string name="ipad_quiz_2_line_1_1">금리가 낮아지면 은행에 저축하려는 사람들이</string>
    <string name="ipad_quiz_2_line_2_1">시장에 자금이</string>
    <string name="answer_grow">많아져</string>
    <string name="answer_fall">적어져</string>
    <string name="ipad_quiz_2_line_2_2">주식 시장에도 돈이 몰리게 되면</string>
    <string name="ipad_quiz_2_line_3_1">주가가</string>
    <string name="answer_rise">상승</string>
    <string name="answer_drop">하락</string>
    <string name="ipad_quiz_2_line_3_2">할 가능성이 높아집니다.</string>
    <string name="ipad_quiz_result_title_success">정답입니다!</string>
    <string name="ipad_quiz_result_title_fail">정답이 아닙니다!</string>
    <string name="ipad_quiz_result_detail_success">침실 탈출에 성공하셨습니다!\n다음 방으로 이동하세요.</string>
    <string name="ipad_quiz_result_detail_fail">퀴즈를 푸는데 실패하셨군요.\n다시 도전해보세요!</string>
    <string name="zoomed_television">zoomed television</string>
    <string name="moving_room">moving room</string>

    <string name="wall_one_background">wall one background</string>
    <string name="bookshelf">bookshelf</string>
    <string name="storage_closet">storage closet</string>
    <string name="radio_table">table with a radio</string>
    <string name="wall_three_background">wall three background</string>
    <string name="grandpa_frame">grandpa frame</string>
    <string name="coat">coat on hanger</string>
    <string name="door">door between Room 1 and Room 2</string>
    <string name="wall_four_background">wall four background</string>
    <string name="lamp">lamp</string>
    <string name="window">window</string>
    <string name="baggage">baggage</string>
    <string name="wall_two_background">wall two background</string>
    <string name="vault">vault</string>
</resources>