<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gold_2"
    android:clickable="true"
    android:focusable="true"
    tools:context=".SolvedIpadFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="400dp"
            android:layout_height="300dp"
            android:layout_marginStart="28dp"
            android:background="@color/transparency_indicator"
            app:layout_constraintBottom_toBottomOf="@id/zoomedSolvedIpadImageView"
            app:layout_constraintStart_toStartOf="@id/zoomedSolvedIpadImageView"
            app:layout_constraintTop_toTopOf="@id/zoomedSolvedIpadImageView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/solvedIpadQuiz1"
                style="@style/ipadQuizConstraintLayout"
                android:visibility="visible"
                tools:ignore="MissingConstraints">

                <TextView
                    android:id="@+id/solvedQuiz1Title"
                    style="@style/quizTitleTextView"
                    android:text="@string/quiz_1_title" />

                <LinearLayout
                    android:id="@+id/solvedQuiz1Content"
                    style="@style/quizContentLinearLayout"
                    app:layout_constraintTop_toBottomOf="@id/solvedQuiz1Title">

                    <TextView
                        style="@style/quiz1TextView"
                        android:text="@string/ipad_quiz_1_1" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageButton
                            android:id="@+id/solvedQuiz1AnswerUp"
                            style="@style/quiz1ImageButton"
                            android:layout_marginEnd="10dp"
                            android:contentDescription="@string/answer_up"
                            android:enabled="false"
                            android:src="@drawable/answer_up" />

                        <ImageButton
                            android:id="@+id/solvedQuiz1AnswerDown"
                            style="@style/quiz1ImageButton"
                            android:layout_width="120dp"
                            android:layout_marginStart="10dp"
                            android:contentDescription="@string/answer_down"
                            android:enabled="false"
                            android:src="@drawable/answer_down" />
                    </LinearLayout>

                    <TextView
                        style="@style/quiz1TextView"
                        android:text="@string/ipad_quiz_1_2" />
                </LinearLayout>

                <ImageButton
                    android:id="@+id/solvedIpadNextImageButton"
                    style="@style/ipadNavigationImageButton"
                    android:layout_marginEnd="28dp"
                    android:contentDescription="@string/next_button"
                    android:src="@drawable/next_button_black"
                    app:layout_constraintEnd_toEndOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/solvedIpadQuiz2"
                style="@style/ipadQuizConstraintLayout"
                android:visibility="gone"
                tools:ignore="MissingConstraints">

                <TextView
                    android:id="@+id/solvedQuiz2Title"
                    style="@style/quizTitleTextView"
                    android:text="@string/quiz_2_title" />

                <LinearLayout
                    android:id="@+id/solvedQuiz2Content"
                    style="@style/quizContentLinearLayout"
                    app:layout_constraintTop_toBottomOf="@id/solvedQuiz2Title">

                    <LinearLayout
                        style="@style/quiz2LineLinearLayout">

                        <TextView
                            style="@style/quiz2TextView"
                            android:text="@string/ipad_quiz_2_line_1_1" />

                        <com.google.android.material.button.MaterialButtonToggleGroup
                            android:id="@+id/solvedQuiz2_1ToggleGroup"
                            style="@style/quiz2ToggleGroup"
                            app:checkedButton="@id/solvedQuiz2_1AnswerDecrease">

                            <Button
                                android:id="@+id/solvedQuiz2_1AnswerDecrease"
                                style="@style/quiz2ToggleButton"
                                android:clickable="false"
                                android:enabled="false"
                                android:text="@string/answer_decrease" />

                            <Button
                                android:id="@+id/solvedQuiz2_1AnswerIncrease"
                                style="@style/quiz2ToggleButton"
                                android:clickable="false"
                                android:enabled="false"
                                android:text="@string/answer_increase" />
                        </com.google.android.material.button.MaterialButtonToggleGroup>
                    </LinearLayout>

                    <LinearLayout
                        style="@style/quiz2LineLinearLayout">

                        <TextView
                            style="@style/quiz2TextView"
                            android:text="@string/ipad_quiz_2_line_2_1" />

                        <com.google.android.material.button.MaterialButtonToggleGroup
                            android:id="@+id/solvedQuiz2_2ToggleGroup"
                            style="@style/quiz2ToggleGroup"
                            app:checkedButton="@id/solvedQuiz2_2AnswerGrow">

                            <Button
                                android:id="@+id/solvedQuiz2_2AnswerGrow"
                                style="@style/quiz2ToggleButton"
                                android:clickable="false"
                                android:enabled="false"
                                android:text="@string/answer_grow" />

                            <Button
                                android:id="@+id/solvedQuiz2_2AnswerFall"
                                style="@style/quiz2ToggleButton"
                                android:clickable="false"
                                android:enabled="false"
                                android:text="@string/answer_fall" />
                        </com.google.android.material.button.MaterialButtonToggleGroup>

                        <TextView
                            style="@style/quiz2TextView"
                            android:text="@string/ipad_quiz_2_line_2_2" />
                    </LinearLayout>

                    <LinearLayout
                        style="@style/quiz2LineLinearLayout">

                        <TextView
                            style="@style/quiz2TextView"
                            android:text="@string/ipad_quiz_2_line_3_1" />

                        <com.google.android.material.button.MaterialButtonToggleGroup
                            android:id="@+id/solvedQuiz2_3ToggleGroup"
                            style="@style/quiz2ToggleGroup"
                            app:checkedButton="@id/solvedQuiz2_3AnswerRise">

                            <Button
                                android:id="@+id/solvedQuiz2_3AnswerRise"
                                style="@style/quiz2ToggleButton"
                                android:clickable="false"
                                android:enabled="false"
                                android:text="@string/answer_rise" />

                            <Button
                                android:id="@+id/solvedQuiz2_3AnswerDrop"
                                style="@style/quiz2ToggleButton"
                                android:clickable="false"
                                android:enabled="false"
                                android:text="@string/answer_drop" />
                        </com.google.android.material.button.MaterialButtonToggleGroup>

                        <TextView
                            style="@style/quiz2TextView"
                            android:text="@string/ipad_quiz_2_line_3_2" />
                    </LinearLayout>
                </LinearLayout>

                <ImageButton
                    android:id="@+id/solvedIpadPrevImageButton"
                    style="@style/ipadNavigationImageButton"
                    android:layout_marginStart="28dp"
                    android:contentDescription="@string/prev_button"
                    android:src="@drawable/prev_button_black"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/zoomedSolvedIpadImageView"
            android:layout_width="wrap_content"
            android:layout_height="340dp"
            android:adjustViewBounds="true"
            android:src="@drawable/zoomed_ipad"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:importantForAccessibility="no" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/solvedIpadBaseNavigation"
        layout="@layout/layout_base_navigation"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</FrameLayout>