<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gold_2"
    android:clickable="true"
    android:focusable="true"
    tools:context=".IpadFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="400dp"
            android:layout_height="300dp"
            android:layout_marginStart="28dp"
            android:background="@color/transparency_indicator"
            app:layout_constraintBottom_toBottomOf="@id/zoomedIpadImageView"
            app:layout_constraintStart_toStartOf="@id/zoomedIpadImageView"
            app:layout_constraintTop_toTopOf="@id/zoomedIpadImageView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ipadQuiz1"
                style="@style/ipadQuizConstraintLayout"
                android:visibility="visible"
                tools:ignore="MissingConstraints">

                <TextView
                    android:id="@+id/quiz1Title"
                    style="@style/quizTitleTextView"
                    android:text="@string/quiz_1_title" />

                <LinearLayout
                    android:id="@+id/quiz1Content"
                    style="@style/quizContentLinearLayout"
                    app:layout_constraintTop_toBottomOf="@id/quiz1Title">

                    <TextView
                        style="@style/quiz1TextView"
                        android:text="@string/ipad_quiz_1_1" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageButton
                            android:id="@+id/quiz1AnswerUp"
                            style="@style/quiz1ImageButton"
                            android:layout_marginEnd="10dp"
                            android:contentDescription="@string/answer_up"
                            android:src="@drawable/answer_up" />

                        <ImageButton
                            android:id="@+id/quiz1AnswerDown"
                            style="@style/quiz1ImageButton"
                            android:layout_marginStart="10dp"
                            android:contentDescription="@string/answer_down"
                            android:src="@drawable/answer_down" />
                    </LinearLayout>

                    <TextView
                        style="@style/quiz1TextView"
                        android:text="@string/ipad_quiz_1_2" />
                </LinearLayout>

                <ImageButton
                    android:id="@+id/ipadNextImageButton"
                    style="@style/ipadNavigationImageButton"
                    android:layout_marginEnd="28dp"
                    android:contentDescription="@string/next_button"
                    android:src="@drawable/next_button_black"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toEndOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ipadQuiz2"
                style="@style/ipadQuizConstraintLayout"
                android:visibility="gone"
                tools:ignore="MissingConstraints">

                <TextView
                    android:id="@+id/quiz2Title"
                    style="@style/quizTitleTextView"
                    android:text="@string/quiz_2_title" />

                <LinearLayout
                    android:id="@+id/quiz2Content"
                    style="@style/quizContentLinearLayout"
                    app:layout_constraintTop_toBottomOf="@id/quiz2Title">

                    <LinearLayout style="@style/quiz2LineLinearLayout">

                        <TextView
                            style="@style/quiz2TextView"
                            android:text="@string/ipad_quiz_2_line_1_1" />

                        <com.google.android.material.button.MaterialButtonToggleGroup
                            android:id="@+id/quiz2_1ToggleGroup"
                            style="@style/quiz2ToggleGroup">

                            <Button
                                android:id="@+id/quiz2_1AnswerDecrease"
                                style="@style/quiz2ToggleButton"
                                android:text="@string/answer_decrease" />

                            <Button
                                android:id="@+id/quiz2_1AnswerIncrease"
                                style="@style/quiz2ToggleButton"
                                android:text="@string/answer_increase" />
                        </com.google.android.material.button.MaterialButtonToggleGroup>
                    </LinearLayout>

                    <LinearLayout style="@style/quiz2LineLinearLayout">

                        <TextView
                            style="@style/quiz2TextView"
                            android:text="@string/ipad_quiz_2_line_2_1" />

                        <com.google.android.material.button.MaterialButtonToggleGroup
                            android:id="@+id/quiz2_2ToggleGroup"
                            style="@style/quiz2ToggleGroup">

                            <Button
                                android:id="@+id/quiz2_2AnswerGrow"
                                style="@style/quiz2ToggleButton"
                                android:text="@string/answer_grow" />

                            <Button
                                android:id="@+id/quiz2_2AnswerFall"
                                style="@style/quiz2ToggleButton"
                                android:text="@string/answer_fall" />
                        </com.google.android.material.button.MaterialButtonToggleGroup>

                        <TextView
                            style="@style/quiz2TextView"
                            android:text="@string/ipad_quiz_2_line_2_2" />
                    </LinearLayout>

                    <LinearLayout style="@style/quiz2LineLinearLayout">

                        <TextView
                            style="@style/quiz2TextView"
                            android:text="@string/ipad_quiz_2_line_3_1" />

                        <com.google.android.material.button.MaterialButtonToggleGroup
                            android:id="@+id/quiz2_3ToggleGroup"
                            style="@style/quiz2ToggleGroup">

                            <Button
                                android:id="@+id/quiz2_3AnswerRise"
                                style="@style/quiz2ToggleButton"
                                android:text="@string/answer_rise" />

                            <Button
                                android:id="@+id/quiz2_3AnswerDrop"
                                style="@style/quiz2ToggleButton"
                                android:text="@string/answer_drop" />
                        </com.google.android.material.button.MaterialButtonToggleGroup>

                        <TextView
                            style="@style/quiz2TextView"
                            android:text="@string/ipad_quiz_2_line_3_2" />
                    </LinearLayout>
                </LinearLayout>

                <ImageButton
                    android:id="@+id/ipadPrevImageButton"
                    style="@style/ipadNavigationImageButton"
                    android:layout_marginStart="28dp"
                    android:contentDescription="@string/prev_button"
                    android:src="@drawable/prev_button_black"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageButton
                    android:id="@+id/ipadSubmitImageButton"
                    style="@style/ipadNavigationImageButton"
                    android:layout_marginEnd="28dp"
                    android:contentDescription="@string/submit_button"
                    android:src="@drawable/submit_button_gold"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toEndOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ipadQuizResult"
                style="@style/ipadQuizConstraintLayout"
                android:visibility="gone"
                tools:ignore="MissingConstraints">

                <ImageView
                    android:id="@+id/ipadQuizResultImageView"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginBottom="4dp"
                    android:importantForAccessibility="no"
                    android:src="@drawable/quiz_success"
                    app:layout_constraintBottom_toTopOf="@id/ipadQuizResultTitle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/ipadQuizResultTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gowunbatang_bold"
                    android:text="@string/ipad_quiz_result_title_success"
                    android:textColor="@color/gold_3"
                    android:textSize="32sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/ipadQuizResultDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:fontFamily="@font/gowunbatang_bold"
                    android:gravity="center"
                    android:text="@string/ipad_quiz_result_detail_success"
                    android:textColor="@color/gold_3"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ipadQuizResultTitle" />

                <ImageButton
                    android:id="@+id/ipadQuizResultImageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:layout_marginEnd="28dp"
                    android:layout_marginBottom="16dp"
                    android:adjustViewBounds="true"
                    android:background="@color/transparency"
                    android:contentDescription="@string/ipad_quiz_result_button"
                    android:scaleType="fitCenter"
                    android:src="@drawable/next_button_gold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/zoomedIpadImageView"
            android:layout_width="wrap_content"
            android:layout_height="340dp"
            android:adjustViewBounds="true"
            android:importantForAccessibility="no"
            android:src="@drawable/zoomed_ipad"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/ipadBaseNavigation"
        layout="@layout/layout_base_navigation"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</FrameLayout>