<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/intro_background"
    tools:context=".IntroActivity">

    <ImageButton
        android:id="@+id/skipImageButton"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:background="@color/transparency"
        android:contentDescription="@string/skip_button"
        android:scaleType="fitCenter"
        android:src="@drawable/skip_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/prevImageButton"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:adjustViewBounds="true"
        android:background="@color/transparency"
        android:contentDescription="@string/prev_button"
        android:scaleType="fitCenter"
        android:src="@drawable/prev_button_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/nextImageButton"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:adjustViewBounds="true"
        android:background="@color/transparency"
        android:contentDescription="@string/next_button"
        android:scaleType="fitCenter"
        android:src="@drawable/next_button_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/gameImageButton"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:adjustViewBounds="true"
        android:background="@color/transparency"
        android:contentDescription="@string/game_button"
        android:scaleType="fitCenter"
        android:src="@drawable/game_button"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="@id/prevImageButton"
        app:layout_constraintBottom_toBottomOf="@id/prevImageButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/introTextView"
        android:layout_width="620dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/kcc_imkwontaek"
        android:gravity="center"
        android:text="@string/intro_0"
        android:textColor="@color/intro_white"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>