<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BaseGameActivity">
    <ImageButton
        android:id="@+id/baseArrowLeft"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:background="@color/transparency"
        android:contentDescription="@string/left_arrow"
        android:padding="0dp"
        android:scaleType="centerInside"
        android:src="@drawable/arrow_left_outlined"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/baseArrowRight"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:background="@color/transparency"
        android:contentDescription="@string/right_arrow"
        android:padding="0dp"
        android:scaleType="centerInside"
        android:src="@drawable/arrow_right_outlined"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/baseArrowBottom"
        android:layout_width="35dp"
        android:layout_height="40dp"
        android:layout_marginBottom="2dp"
        android:background="@color/transparency"
        android:contentDescription="@string/bottom_arrow"
        android:padding="0dp"
        android:scaleType="centerInside"
        android:src="@drawable/arrow_bottom_outlined"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>